--- a/app/src/main/res/layout/activity_ludo_play_screen.xml
+++ b/app/src/main/res/layout/activity_ludo_play_screen.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
     android:background="@color/colorPrimary"
-    tools:context=".MainActivity">
+    tools:context=".LudoPlayScreen">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -29,12 +28,11 @@
             android:text="LUDO GAME"
             android:layout_centerHorizontal="true"/>
         <Button
-            android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000000"
             android:text="PLAY"
-            />
+            android:onClick="onPlayClick"/>
 
     </LinearLayout>
 
