--- a/app/src/main/res/layout/activity_ludo_quiz.xml
+++ b/app/src/main/res/layout/activity_ludo_quiz.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#1A4944"
-    tools:context=".LudoActivity">
+    tools:context=".LudoQuiz">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
