--- a/app/src/main/res/layout/activity_chapter_list.xml
+++ b/app/src/main/res/layout/activity_chapter_list.xml
@@ -6,11 +6,11 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/titleTextView"
+        android:id="@+id/subjectTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Chapters"
+        android:text="विषय: "
         android:textSize="20sp"
         android:textStyle="bold" />
 
